force-app/main/default/objects/Interaction_Summary__c/Interaction_Summary__c.object-meta.xml
<CustomObject>
    <label>Interaction Summary</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interaction Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>