force-app/main/default/objects/Interaction_Summary__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Interaction Summaries</relationshipLabel>
    <relationshipName>Interaction_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>