force-app/main/default/objects/Interaction_Summary__c/fields/Confidentiality_Type__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality_Type__c</fullName>
    <label>Confidentiality Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confidential</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>