force-app/main/default/objects/Interaction_Summary__c/fields/Interaction_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Purpose__c</fullName>
    <label>Interaction Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meet and Greet</fullName>
            </value>
            <value>
                <fullName>Deal Execution</fullName>
            </value>
            <value>
                <fullName>Quarterly Check-In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>