force-app/main/default/objects/Interaction_Summary__c/fields/InteractionId__c.field-meta.xml
<CustomField>
    <fullName>InteractionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interaction</label>
    <referenceTo>Interaction__c</referenceTo>
    <relationshipLabel>Interaction Summaries</relationshipLabel>
    <relationshipName>Interaction_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>