force-app/main/default/objects/Interaction_Summary__c/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <label>Next Steps</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>