force-app/main/default/objects/Interaction_Summary__c/fields/Offering__c.field-meta.xml
<CustomField>
    <fullName>Offering__c</fullName>
    <label>Offering</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mergers and Acquisition</fullName>
            </value>
            <value>
                <fullName>Debt Capital Markets</fullName>
            </value>
            <value>
                <fullName>Equity Capital Markets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>