force-app/main/default/objects/Interaction_Summary__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>Interaction Summaries</relationshipLabel>
    <relationshipName>Interaction_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>