force-app/main/default/objects/Interaction_Summary__c/fields/Partner_AccountId__c.field-meta.xml
<CustomField>
    <fullName>Partner_AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Interaction Summaries (Partner Account)</relationshipLabel>
    <relationshipName>Interaction_Summaries1</relationshipName>
    <type>Lookup</type>
</CustomField>